# openaec-reports

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DIAGNOSE_JSON_ALIGNMENT.md  Dockerfile  PLAN-rust-implementation.md  PLAN_HUISSTIJL_AANPAK.md  README.md  SESSION_STATUS.md  STATUS.md  TODO.md  deploy-rust.sh  deploy.sh  docker-compose.authentik.yml  pyproject.toml  test_bic_rapport.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release-desktop.yml
_archive/: coverage_baseline.txt  coverage_final.txt  coverage_report.txt  test_results_final.txt
_archive/dev_scripts/: test_b5.py  test_b5_stationery.py  test_bijlage_analyse.py  test_bijlage_mockup.py  test_bijlage_width.py  test_colofon_analyse.py  test_colofon_compare.py  test_colofon_mockup.py  test_colofon_mockup_v2.py  test_colofon_mockup_v3.py  test_content_mockup.py  test_content_styles.py  test_cover_analyse.py  test_cover_mockup.py  test_font_width.py  test_full_report.py  test_standaard_mockup.py  test_toc_analyse.py  test_toc_mockup.py  test_toc_mockup_v2.py
_archive/docs/: DEPLOYMENT_GUIDE.md  DIAGNOSE_JSON_ALIGNMENT.md  SESSION_STATUS.md
_archive/huisstijl_analysis/: analyze_layout.py  analyze_out.txt  extract_out.txt  extract_pages.py  font_check.py  font_diag.py  font_diag.txt  gen_out.txt  generate_example.py  layout_analysis.json  style_diag.py  style_diag.txt  voorbeeld_rapport.json
_archive/plans/: PLAN_HUISSTIJL_AANPAK.md  PLAN_HUISSTIJL_STUDIO.md  PLAN_STATIONERY_ARCHITECTUUR.md
_archive/prompts/: B-FINAL_backend_completion.md  PROMPT_B1_MAP_BLOCK.md  PROMPT_B2_API.md  PROMPT_B3_SCAFFOLD_LANDSCAPE.md  PROMPT_B5_HUISSTIJL_EXTRACTIE.md  PROMPT_BRAND_BUILDER.md  PROMPT_BUGFIXES.md  PROMPT_BUGFIXES_B1_B2.md  PROMPT_FASE_A_BRAND_ANALYZER.md  PROMPT_FASE_B_FIX_HUISSTIJL.md  PROMPT_FASE_B_HUISSTIJL_CORRECTIES.md  PROMPT_HUISSTIJL_STUDIO.md  PROMPT_MONOREPO_MERGE.md  PROMPT_P1_STATIONERY_EXTRACTIE.md  PROMPT_P2_CLEANUP.md  PROMPT_P3_SPECIAL_PAGES_BRAND.md  PROMPT_P4_COVERAGE_GAPS.md  PROMPT_STATIONERY_EN_FIXES.md  PROMPT_TENANT_SEPARATION.md  PROMPT_TEST_SUITE.md
_archive/specs/: BACKEND_OPDRACHT.md  COVER_SPEC.md  SPEC_API_KEY_SUPPORT.md  (+1 more)
archief/: 2026-Q1-voltooid.md
data/: auth.db
deploy/: .env.example  .env.openaec.example  .gitignore  Caddyfile  Caddyfile.openaec  README.md  docker-compose.openaec.yml  docker-compose.yml
docs/: ARCHITECTURE_PLAN_TENANT_MODULES.md  SYMITECH_API_GUIDE.md  ai-instructions.md  pitch.html  symitech_bic_example.json  symitech_bic_factuur_example.json  symitech_bic_factuur_test.json  uitleg.html
examples/: README.md  example_data.json  example_structural.py  generate_integration_test.py  generate_showcase.py  pyrevit_generate_report.py
frontend/: .env.production  CLAUDE.md  STATUS.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
huisstijl/: HUISSTIJL_SPEC.md
prompts/: PROMPT_FIX_FONT_EMBEDDING.md
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
rust/crates/openaec-cli/: Cargo.toml
rust/crates/openaec-cli/src/: main.rs
rust/crates/openaec-core/: Cargo.toml
rust/crates/openaec-core/src/: block_renderer.rs  brand.rs  data_transform.rs  document.rs  engine.rs  font_manager.rs  json_adapter.rs  kadaster.rs  lib.rs  report_types.rs  schema.rs  special_pages.rs  stationery.rs  styles.rs  template_config.rs  template_loader.rs  tenant.rs  toc.rs
rust/crates/openaec-core/tests/: integration_schema.rs
rust/crates/openaec-engine/: Cargo.toml
rust/crates/openaec-engine/src/: data_bind.rs  engine.rs  error.rs  flow_layout.rs  font_engine.rs  lib.rs  pdf_backend.rs  special_pages.rs  text.rs  zone_renderer.rs
rust/crates/openaec-engine/tests/: test_integration.rs
rust/crates/openaec-ffi/: Cargo.toml
rust/crates/openaec-ffi/src/: lib.rs
rust/crates/openaec-layout/: Cargo.toml
rust/crates/openaec-layout/src/: doc_template.rs  draw.rs  error.rs  flowable.rs  fonts.rs  frame.rs  image_flowable.rs  lib.rs  page_template.rs  paragraph.rs  spacer.rs  stationery_merge.rs  table.rs  types.rs
rust/crates/openaec-server/: Cargo.toml
rust/crates/openaec-server/src/: error.rs  helpers.rs  lib.rs  main.rs  state.rs
rust/crates/openaec-server/src/db/: mod.rs  projects.rs  reports.rs
rust/crates/openaec-server/src/routes/: admin.rs  auth.rs  brands.rs  cloud.rs  generate.rs  health.rs  mod.rs  stationery.rs  templates.rs  validate.rs
rust/tests/fixtures/: example_structural.json
schemas/: PYREVIT_GUIDE.md  example_bic_rapport.json  example_openaec_structural.json  example_symitech_bic_factuur.json  report.schema.json  test_336_bic_factuur.json
scripts/: SKILL_BRAND_EXTRACTION.md  brand_extractor.py  build_tenant_brand.py  check_schema_sync.py  compare_pdfs.py  diff_baseline.py  extract_3bm_stationery.py  gen_bic_rapport_json.py  generate_flyer.py  generate_openaec_test.py  render_baseline.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
test_output/: bijlage_template.yaml  colofon_template.yaml  cover_template.yaml  toc_template.yaml
tests/: conftest.py  test_admin.py  test_admin_preview.py  test_api.py  test_api_keys.py  test_api_template.py  test_api_v2.py  test_auth.py  test_block_registry.py  test_brand.py  test_brand_analyzer.py  test_brand_builder.py  test_brand_extraction.py  test_brand_leakage.py  test_brand_onboarding_api.py  test_brand_session_cleanup.py  test_cli.py  test_cloud_credentials.py  test_core.py  test_data_adapters.py  test_data_binding.py  test_engine.py  test_flow_layout.py  test_from_json.py  test_image_block.py  test_json_adapter.py  test_kadaster_conversion.py  test_landscape.py  test_layout_extractor.py  test_logo_prep.py  test_map_block.py  test_modules_foundation.py  test_oidc.py  test_page_templates_integration.py  test_refs.py  test_registration.py  test_renderer_v2.py  test_report_types.py  test_reports_storage.py  test_security_fixes.py  (+23 more)
tools/: compare_pdfs.py  extract_reference_coords.py
(+414 files in other folders)
