[workspace]
resolver = "2"
members = [
    "crates/openaec-layout",
    "crates/openaec-core",
    "crates/openaec-server",
    "crates/openaec-ffi",
    "crates/openaec-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["OpenAEC"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# PDF generation
printpdf = "0.7"
ttf-parser = "0.25"
lopdf = "0.39"

# Image processing
image = "0.25"
resvg = "0.44"

# Fonts
fontdb = "0.22"

# HTTP / networking
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# FFI
libc = "0.2"

# Testing
tempfile = "3"
