[package]
name = "openaec-core"
description = "Core library for OpenAEC report generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fontdb = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
chrono = "0.4"
openaec-layout = { path = "../openaec-layout" }

[dev-dependencies]
tempfile = { workspace = true }
