[package]
name = "openaec-engine"
description = "V3 TemplateEngine — coordinate-based PDF rendering from YAML templates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
openaec-core = { path = "../openaec-core" }

# PDF generation
pdf-writer = "0.13"
subsetter = "0.2"

# Font metrics
ttf-parser = { workspace = true }

# PDF reading (stationery embedding)
lopdf = { workspace = true }

# Image processing
image = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
