[package]
name = "openaec-server"
description = "Axum API server for OpenAEC report generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
openaec-core = { path = "../openaec-core" }
openaec-engine = { path = "../openaec-engine" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
